tests/baselines/reference/computedPropertyNames45_ES6.errors.txt
computedPropertyNames45_ES6.ts(10,5): error TS2411: Property '["get1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.
computedPropertyNames45_ES6.ts(11,9): error TS2411: Property '["set1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.


==== computedPropertyNames45_ES6.ts (2 errors) ====
    class Foo { x }
    class Foo2 { x; y }
    
    class C {
        get ["get1"]() { return new Foo }
    }
    
    class D extends C {
        // No error when the indexer is in a class more derived than the computed property
        [s: string]: Foo2;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2411: Property '["get1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.
!!! related TS2728 computedPropertyNames45_ES6.ts:5:9: '["get1"]' is declared here.
        set ["set1"](p: Foo) { }
            ~~~~~~~~
!!! error TS2411: Property '["set1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.
    }